Overflow fix for columnResize handles

--- a/qcode-ui-3.5.css
+++ b/qcode-ui-3.5.css
@@ -23,6 +23,15 @@
  * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */
 
+/* ==== columnResize.css ==== */
+.qc-column-resize th > .ui-resizable-handle {
+    width: 19px;
+    right: -9px;
+}
+.qc-column-resize column-resize-wrapper {
+    overflow-x: hidden;
+}
+
 /* ==== columnsShowHideControl.css ==== */
 .columns-show-hide-toolbar .title {
     font-size:120%;
